--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,15 +1,10 @@
 !!! 5
 html
   head
-    title Instagram - Real-time updates demo
+    title Instagram Notifier
+    meta(name="viewport", content="width=device-width, user-scalable=yes")
     link(rel="stylesheet", href="/static/styles/reset.css", type="text/css")
-    link(rel="stylesheet", href="/static/styles/master.css", type="text/css")
-    script(src="/socket.io/socket.io.js", type="text/javascript")
+    link(rel="stylesheet", href="/static/styles/app.css", type="text/css")
     script(src="/static/scripts/jquery-1.5.min.js", type="text/javascript")
-    script(src="/static/scripts/master.js", type="text/javascript")
-    script( type="text/javascript")
-      - socket.connect();
-      - $(document).ready(Media.positionAll);
   body
-    #wrap
-      !{body}
+    !{body}
