Move app config back to app.js, remove public/static

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,8 @@ html
   head
     title Instagram Notifier
     meta(name="viewport", content="width=device-width, user-scalable=yes")
-    link(rel="stylesheet", href="/static/styles/reset.css", type="text/css")
-    link(rel="stylesheet", href="/static/styles/app.css", type="text/css")
-    script(src="/static/scripts/jquery-1.5.min.js", type="text/javascript")
+    link(rel="stylesheet", href="/styles/reset.css", type="text/css")
+    link(rel="stylesheet", href="/styles/app.css", type="text/css")
+    script(src="/scripts/jquery-1.5.min.js", type="text/javascript")
   body
     !{body}
