--- a/views/subscriptions/index.jade
+++ b/views/subscriptions/index.jade
@@ -1,4 +1,4 @@
-script(src="/static/scripts/subscriptions.js", type="text/javascript")
+script(src="/scripts/subscriptions.js", type="text/javascript")
 
 div#wrapper
   h2 Current Location
