UI creates new subscription and lists existing

--- a/views/subscriptions/index.jade
+++ b/views/subscriptions/index.jade
@@ -5,7 +5,8 @@ div#wrapper
   div#location
     div.lat 000.000000
     div.lng 000.000000
-    button.button Follow!
-  h2 Following
-  div#locations 
-    div None
+    button#follow.button Follow!
+  div#subscriptions 
+    h2 Following
+    button#unfollow.button Unfollow All
+
