--- a/views/subscriptions/index.jade
+++ b/views/subscriptions/index.jade
@@ -3,14 +3,19 @@ script(src="/scripts/subscriptions.js", type="text/javascript")
 div#wrapper
   h2 Current Location
   div#location
-    a#map_link
-      span.lat 000.000000
-      ,
-      span.lng 000.000000
-    div
-      span.accuracy 10000
-      span m accuracy
-    button#follow.button Follow!
+    div.finding Finding you...
+    div.found
+      a#map_link
+        span.lat 000.000000
+        ,
+        span.lng 000.000000
+        span=' @'
+        span.accuracy 1000
+        span m 
+      div
+        button#follow.button Follow!
+    div.not_found Unable to find your current location
+      
   div#subscriptions 
     h2 Following
     button#unfollow.button Unfollow All
