--- a/views/subscriptions/index.jade
+++ b/views/subscriptions/index.jade
@@ -16,7 +16,7 @@ div#location
   div.not_found Unable to find your current location
     
 div#subscriptions 
-  h2 Following
+  h2 Currently Following
   ul
   button#unfollow.button Unfollow All
 
