Watch not Follow

--- a/views/subscriptions/index.jade
+++ b/views/subscriptions/index.jade
@@ -12,10 +12,10 @@ div#location
       span.accuracy 1000
       span m 
     div
-      button#follow.button Follow!
+      button#follow.button Watch this Place!
   div.not_found Unable to find your current location
     
 div#subscriptions 
-  h2 Currently Following
+  h2 Currently Watching
   ul
 
