--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,8 @@ html
     meta(name="viewport", content="width=device-width, user-scalable=yes")
     link(rel="stylesheet", href="/styles/reset.css", type="text/css")
     link(rel="stylesheet", href="/styles/app.css", type="text/css")
-    script(src="/scripts/jquery-1.5.min.js", type="text/javascript")
-    script(src="/scripts/underscore-1.1.6.min.js", type="text/javascript")
-    script(src="/scripts/backbone-0.3.3.min.js", type="text/javascript")
+    script(src="/scripts/lib/jquery-1.5.min.js", type="text/javascript")
+    script(src="/scripts/lib/underscore-1.1.6.min.js", type="text/javascript")
+    script(src="/scripts/lib/backbone-0.3.3.min.js", type="text/javascript")
   body
     !{body}
